docs/api/qiskit/0.29/qiskit.aqua.algorithms.NumPyMinimumEigensolver.mdx
---
title: NumPyMinimumEigensolver (v0.29)
description: API reference for qiskit.aqua.algorithms.NumPyMinimumEigensolver in qiskit v0.29
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.aqua.algorithms.NumPyMinimumEigensolver
---

# NumPyMinimumEigensolver

<Class id="qiskit.aqua.algorithms.NumPyMinimumEigensolver" isDedicatedPage={true} github="https://github.com/qiskit-community/qiskit-aqua/tree/stable/0.9/qiskit/aqua/algorithms/minimum_eigen_solvers/numpy_minimum_eigen_solver.py" signature="NumPyMinimumEigensolver(operator=None, aux_operators=None, filter_criterion=None)" modifiers="class">
  Bases: `qiskit.aqua.algorithms.classical_algorithm.ClassicalAlgorithm`, `qiskit.aqua.algorithms.minimum_eigen_solvers.minimum_eigen_solver.MinimumEigensolver`

  The Numpy Minimum Eigensolver algorithm.

  **Parameters**

  *   **operator** (`Union`\[`OperatorBase`, `LegacyBaseOperator`, `None`]) – Operator instance
  *   **aux\_operators** (`Optional`\[`List`\[`Union`\[`OperatorBase`, `LegacyBaseOperator`, `None`]]]) – Auxiliary operators to be evaluated at minimum eigenvalue
  *   **filter\_criterion** (`Optional`\[`Callable`\[\[`Union`\[`List`, `ndarray`], `float`, `Optional`\[`List`\[`float`]]], `bool`]]) – callable that allows to filter eigenvalues/eigenstates. The minimum eigensolver is only searching over feasible states and returns an eigenstate that has the smallest eigenvalue among feasible states. The callable has the signature filter(eigenstate, eigenvalue, aux\_values) and must return a boolean to indicate whether to consider this value or not. If there is no feasible element, the result can even be empty.

  ## Methods

  <span id="qiskit-aqua-algorithms-numpyminimumeigensolver-compute-minimum-eigenvalue" />

  ### compute\_minimum\_eigenvalue

  <Function id="qiskit.aqua.algorithms.NumPyMinimumEigensolver.compute_minimum_eigenvalue" signature="NumPyMinimumEigensolver.compute_minimum_eigenvalue(operator=None, aux_operators=None)">
    Computes minimum eigenvalue. Operator and aux\_operators can be supplied here and if not None will override any already set into algorithm so it can be reused with different operators. While an operator is required by algorithms, aux\_operators are optional. To ‘remove’ a previous aux\_operators array use an empty list here.

    **Parameters**

    *   **operator** (`Union`\[`OperatorBase`, `LegacyBaseOperator`, `None`]) – If not None replaces operator in algorithm
    *   **aux\_operators** (`Optional`\[`List`\[`Union`\[`OperatorBase`, `LegacyBaseOperator`, `None`]]]) – If not None replaces aux\_operators in algorithm

    **Return type**

    `MinimumEigensolverResult`

    **Returns**

    MinimumEigensolverResult
  </Function>

  <span id="qiskit-aqua-algorithms-numpyminimumeigensolver-run" />

  ### run

  <Function id="qiskit.aqua.algorithms.NumPyMinimumEigensolver.run" signature="NumPyMinimumEigensolver.run()">
    Execute the classical algorithm.

    **Returns**

    results of an algorithm.

    **Return type**

    dict
  </Function>

  <span id="qiskit-aqua-algorithms-numpyminimumeigensolver-supports-aux-operators" />

  ### supports\_aux\_operators

  <Function id="qiskit.aqua.algorithms.NumPyMinimumEigensolver.supports_aux_operators" signature="NumPyMinimumEigensolver.supports_aux_operators()" modifiers="classmethod">
    Whether computing the expectation value of auxiliary operators is supported.

    If the minimum eigensolver computes an eigenstate of the main operator then it can compute the expectation value of the aux\_operators for that state. Otherwise they will be ignored.

    **Return type**

    `bool`

    **Returns**

    True if aux\_operator expectations can be evaluated, False otherwise
  </Function>

  ## Attributes

  ### aux\_operators

  <Attribute id="qiskit.aqua.algorithms.NumPyMinimumEigensolver.aux_operators">
    **Return type**

    `Optional`\[`List`\[`Optional`\[`OperatorBase`]]]
  </Attribute>

  ### filter\_criterion

  <Attribute id="qiskit.aqua.algorithms.NumPyMinimumEigensolver.filter_criterion">
    returns the filter criterion if set

    **Return type**

    `Optional`\[`Callable`\[\[`Union`\[`List`, `ndarray`], `float`, `Optional`\[`List`\[`float`]]], `bool`]]
  </Attribute>

  ### operator

  <Attribute id="qiskit.aqua.algorithms.NumPyMinimumEigensolver.operator">
    **Return type**

    `Optional`\[`OperatorBase`]
  </Attribute>

  ### random

  <Attribute id="qiskit.aqua.algorithms.NumPyMinimumEigensolver.random">
    Return a numpy random.
  </Attribute>
</Class>

